--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
     <head>
         <title>Library</title>
        <style>
+            body{ 
+        background: url(ist.jpg) no-repeat center center fixed; 
+        background-size: cover;
+         height: 100%;
+         overflow: hidden;
+        }
       .first{
         overflow: hidden;
         background-color:rgba(0, 0, 0, 0.7);
@@ -40,7 +46,7 @@
       .a{ color: rgb(207, 126, 47); font-size:50px; }
        </style>
     </head>
-    <body background="1st.jpg" >
+    <body >
       <div class="first">
           <a href="">Home</a>
           <a href="">Books</a>
