--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>Library</title>
        <style>
             body{ 
-        background: url(ist.jpg) no-repeat center center fixed; 
+        background: url(1st.jpg) no-repeat center center fixed; 
         background-size: cover;
          height: 100%;
          overflow: hidden;
