--- a/index.html
+++ b/index.html
@@ -2,12 +2,7 @@
     <head>
         <title>Library</title>
        <style>
-            body{ 
-        background: url(1st.jpg) no-repeat center center fixed; 
-        background-size: cover;
-         height: 100%;
-         overflow: hidden;
-        }
+        
       .first{
         overflow: hidden;
         background-color:rgba(0, 0, 0, 0.7);
@@ -46,7 +41,7 @@
       .a{ color: rgb(207, 126, 47); font-size:50px; }
        </style>
     </head>
-    <body >
+    <body background="1st.jpg">
       <div class="first">
           <a href="">Home</a>
           <a href="">Books</a>
