--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
     <head>
         <title>Library</title>
        <style>
-        
+       body{
+    background: url('1stt.jpg') center center no-repeat;
+    width:100%;
+    height:auto
+} 
       .first{
         overflow: hidden;
         background-color:rgba(0, 0, 0, 0.7);
@@ -41,7 +45,7 @@
       .a{ color: rgb(207, 126, 47); font-size:50px; }
        </style>
     </head>
-    <body background="1st.jpg">
+    <body>
       <div class="first">
           <a href="">Home</a>
           <a href="">Books</a>
