--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
        body{
     background: url('1stt.jpg') center center no-repeat;
     width:100%;
-    height:auto
+    height:100%;
 } 
       .first{
         overflow: hidden;
