--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     background: url('1stt.jpg') center center no-repeat;
     width:100%;
     height:100%;
+       background-size: contain;
+      
 } 
       .first{
         overflow: hidden;
