--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
         <title>Library</title>
        <style>
        body{
-    background: url('1stt.jpg') center center no-repeat;
+    background: url('1stt.jpg') center center no-repeat fixed;
     width:100%;
     height:100%;
-       background-size: contain;
+    background-size:cover;
       
 } 
       .first{
