--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
     <head>
         <title>Library</title>
        <style>
-       body{
-    background: url('1stt.jpg') center center no-repeat fixed;
-    width:100%;
-    height:100%;
-      
-} 
+    
+          .bg { 
+  background-image: url("img_girl.jpg");
+
+  height: 100%; 
+
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}       
       .first{
         overflow: hidden;
         background-color:rgba(0, 0, 0, 0.7);
