--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
        <style>
     
           .bg { 
-  background-image: url("img_girl.jpg");
+  background-image: url("1stt.jpg");
 
   height: 100%; 
 
