--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>Library</title>
        <style>
     
-          .bg { 
+          body { 
   background-image: url("1stt.jpg");
 
   height: 100%; 
