--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@ font-size: 60px;
     </head>
     <body>
         <div class="first">
-            <a href="">Home</a>
+            <a href="index.html" >Home</a>
             <a href="">Books</a>
             <a href="">Membership</a>
             <a href="">contact</a>
