--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
     </head>
     <body>
       <div class="first">
-          <a href="">Home</a>
+          <a href="index.html">Home</a>
           <a href="">Books</a>
           <a href="">Membership</a>
-          <a href="">contact</a>
+          <a href="contact.html">contact</a>
           <a href="">About us</a>
       </div>
       <div class="second">
