--- a/contact.html
+++ b/contact.html
@@ -65,6 +65,7 @@ font-size: 60px;
             color:white;  
             font-weight: bold;
     }
+            .second2 h3{font-size: 200%;}
    input ,textarea{
     width: 100%;
   padding: 12px;
@@ -112,7 +113,7 @@ font-size: 60px;
                     <input type="email" id="Email" name="Email" placeholder="email@example.com.."><br>
  
                     <label for="mobile"> Your Mobile</label><br>
-                    <input type="number" id="mobile" name="mobile" placeholder="Your mobile phone.."><br>                   
+                    <input type="tel" id="mobile" name="mobile" placeholder="Your mobile phone.."><br>                   
                     
                     <label for="subject">Your massage</label><br>
                     <textarea id="subject" name="subject" placeholder="Write something.." style="height:70%"></textarea>
