--- a/contact.html
+++ b/contact.html
@@ -106,13 +106,13 @@ font-size: 60px;
                                 <h4>Leave us a massage</h4>
 
                     <label for="name"> Name</label><br>
-                    <input type="text" id="name" name="name" placeholder="Your name.."><br>
+                    <input type="text" id="name" name="name" placeholder="Your name.." required><br>
                     
                     <label for="Email"> Email</label><br>
-                    <input type="email" id="Email" name="Email" placeholder="email@example.com.."><br>
+                    <input type="email" id="Email" name="Email" placeholder="email@example.com.." required ><br>
  
                     <label for="mobile"> Your Mobile</label><br>
-                    <input type="tel" id="mobile" name="mobile" placeholder="Your mobile phone.."><br>                   
+                    <input type="tel" id="mobile" name="mobile" placeholder="Your mobile phone.." required><br>                   
                     
                     <label for="subject">Your massage</label><br>
                     <textarea id="subject" name="subject" placeholder="Write something.." style="height:70%"></textarea>
