--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <a href="">Books</a>
           <a href="">Membership</a>
           <a href="contact.html">contact</a>
-          <a href="">About us</a>
+          <a href="about.html">About us</a>
       </div>
       <div class="second">
           <p>“Books are a uniquely portable magic.” <br> <strong class="a">Enjoy our books</strong></p>>
