--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@ font-size: 60px;
             <a href="">Books</a>
             <a href="">Membership</a>
             <a href="">contact</a>
-            <a href="">About us</a>
+            <a href="about.html">About us</a>
         </div>
             <div class="second">
                   <div class="second1">
