--- a/about.html
+++ b/about.html
@@ -38,6 +38,7 @@ body {
         overflow: hidden;
         background-color:rgba(0, 0, 0, 0.5);
         width:30%;
+        height:30%;
         position: absolute;
         top:30%;
        border-radius: 30px;
