--- a/about.html
+++ b/about.html
@@ -36,15 +36,15 @@ body {
     }
     .second{
         overflow: hidden;
+        font-size: 2vw;
         background-color:rgba(0, 0, 0, 0.5);
-        width:30%;
-        height:30%;
+        width:40%;
         position: absolute;
         top:30%;
        border-radius: 30px;
        color: white;
        padding: 20px;
-
+box-sizing: border-box;
       }
         </style>
     </head>
