--- a/about.html
+++ b/about.html
@@ -32,19 +32,18 @@ body {
       h1{
         margin: 30px;
         color: white;
-        size: 0px;
+        size: 30px;
     }
     .second{
-        overflow: hidden;
-        font-size: 2vw;
+       overflow: hidden;
         background-color:rgba(0, 0, 0, 0.5);
-        width:40%;
+        width:30%;
         position: absolute;
         top:30%;
        border-radius: 30px;
        color: white;
        padding: 20px;
-box-sizing: border-box;
+       display: inline-block;
       }
         </style>
     </head>
