--- a/about.html
+++ b/about.html
@@ -50,8 +50,8 @@ body {
     <body>
             <div class="first">
                     <a href="index.html">Home</a>
-                    <a href="">Books</a>
-                    <a href="">Membership</a>
+                    <a href="books.html">Books</a>
+                    <a href="member.html">Membership</a>
                     <a href="contact.html">contact</a>
                     <a href="about.html">About us</a>
                 </div>
