--- a/contact.html
+++ b/contact.html
@@ -81,9 +81,9 @@ font-size: 60px;
     <body>
         <div class="first">
             <a href="index.html" >Home</a>
-            <a href="">Books</a>
-            <a href="">Membership</a>
-            <a href="">contact</a>
+            <a href="books.html">Books</a>
+            <a href="member.html">Membership</a>
+            <a href="contact.html">contact</a>
             <a href="about.html">About us</a>
         </div>
             <div class="second">
