--- a/index.html
+++ b/index.html
@@ -48,6 +48,23 @@
           text-align: center;
       }
       .a{ color: rgb(207, 126, 47); font-size:50px; }
+        a{
+  color: rgb(207, 126, 47);
+  text-decoration: none;
+ }
+      .btn {
+    position: absolute;
+    top: 87%;
+    left: 60%;
+}
+b{
+    margin: 20px;
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 5px;
+    color: rgb(255, 255, 255);
+    font-family: "Agency FB";
+    font-size: 18pt;
+}   
        </style>
     </head>
     <body>
@@ -61,6 +78,10 @@
       <div class="second">
           <p>“Books are a uniquely portable magic.” <br> <strong class="a">Enjoy our books</strong></p>>
       </div>
-
+        
+ <div class="btn">
+        <a href="sign-up.html"><b>Sign Up</b></a>
+        <a href="sign-in.html"><b>Log In</b></a>
+    </div>
     </body>
 </html>
