--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@ b{
       </div>
         
  <div class="btn">
-        <a href="sign-up.html"><b>Sign Up</b></a>
-        <a href="sign-in.html"><b>Log In</b></a>
+        <a href="signup.html"><b>Sign Up</b></a>
+        <a href="login.html"><b>Log In</b></a>
     </div>
     </body>
 </html>
