--- a/login.html
+++ b/login.html
@@ -48,7 +48,7 @@ header {
 input[type="password"],
 input[type="email"] {
     display: block;
-    width: 400px;
+    width: 100%;
     background-color: transparent;
     border: none;
     border-bottom: 2px solid #fff;
