--- a/books.html
+++ b/books.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Books</title>
-        <link rel="stylesheet" href="css/books.css">
+        <link rel="stylesheet" href="books.css">
 
     </head>
     <body>
@@ -22,46 +22,46 @@
                 </div>
                 <table cellspacing="40px" align="center">
                         <tr>
-                            <th><img src="css/med.png"> <br>
+                            <th><img src="med.png"> <br>
                                 <a href="https://openlibrary.org/subjects/medicine#sort=date_published&ebooks=true" target="blanck"> Medicine  </a>
                            </th>
-                            <th><img src="css/art.png"> <br>
+                            <th><img src="art.png"> <br>
                                 <a href="https://openlibrary.org/subjects/art#sort=date_published&ebooks=true" target="blanck"> Art  </a>
                             </th>
-                            <th><img src="css/rom.png"><br>
+                            <th><img src="rom.png"><br>
                                 <a href="https://openlibrary.org/subjects/romance#sort=date_published&ebooks=true" target="blanck">  Romance </a>
                             </th>
-                            <th><img src="css/his.png"><br>
+                            <th><img src="his.png"><br>
                                 <a href="https://openlibrary.org/subjects/history#sort=date_published&ebooks=true" target="blanck"> History  </a>
                             </th>
                         </tr>
         
                         <tr>
-                            <th><img src="css/rel.png"><br>
+                            <th><img src="rel.png"><br>
                                 <a href="https://openlibrary.org/subjects/religion#sort=date_published&ebooks=true" target="blanck">  Religion </a>
                             </th>
-                            <th><img src="css/child.png"><br>
+                            <th><img src="child.png"><br>
                                 <a href="https://openlibrary.org/subjects/children#sort=date_published&ebooks=true" target="blanck">  Children </a>
                             </th>
-                            <th><img src="css/science.png" ><br>
+                            <th><img src="science.png" ><br>
                                 <a href="https://openlibrary.org/subjects/science_fiction#sort=date_published&ebooks=true" target="blanck"> Science fiction  </a>
                             </th>
-                            <th><img src="css/biography.png"><br>
+                            <th><img src="biography.png"><br>
                                 <a href="https://openlibrary.org/subjects/biographies#sort=date_published&ebooks=true" target="blanck">  Biographies </a>
                             </th>
                         </tr>
                         
                         <tr>
-                            <th><img src="css/web.png"> <br>
+                            <th><img src="web.png"> <br>
                                 <a href="https://www.amazon.com/Computers-Technology-Books/b?ie=UTF8&node=5" target="blanck">  Computer & Tech </a>
                             </th>
-                            <th><img src="css/sport.png"><br>
+                            <th><img src="sport.png"><br>
                                 <a href="https://www.goodreads.com/shelf/show/sports" target="blanck"> Sports  </a>
                             </th>
-                            <th><img src="css/cat-black.png" > <br>
+                            <th><img src="cat-black.png" > <br>
                                 <a href="https://www.goodreads.com/list/tag/horror" target="blanck">  horror </a>
                             </th>
-                            <th><img src="css/trav.png" ><br>
+                            <th><img src="trav.png" ><br>
                                 <a href="https://www.goodreads.com/shelf/show/travel" target="blanck"> Travels  </a>
                             </th>
                         </tr>
